2005-08-31  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-object-factory.h (*_to_eos): Added.
	* eca-chain.cpp (chain_operator_to_string): Removed.
	* eca-chain.cpp (controller_to_string): Removed.
	* eca-chain.cpp (operator_params_to_string): Removed.
	* eca-chainsetup-parser.cpp (audioio_to_string): Removed.
        * library interface version updated to 16:0:0

2005-08-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 15 frozen (2.4.3 release)

2005-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* midi-server.h: Added MIDI_SERVER::set_schedrealtime().

2005-08-19  Pedro Lopez-Cabanillas  <pedrolc@.devtag.AUTHORS>

	* midiio-aseq.h: Added.
        * library interface version updated to 15:0:1

2005-08-07  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.cpp (run): Added optional "batchmode"
	parameter.

2005-03-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 14 frozen (2.4.0 release)

2004-12-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.h (Mix_mode_t): Added.
	* eca-chainsetup.h (set_mix_mode, mix_mode): Added.	

2004-12-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-format.h (format_string): Function signature changed;
	no longer throws an exception.
	* sample-specs.h: SAMPLE_SPECS::is_system_littleendian removed as
	obsolete.
	* eca-chainsetup.cpp (is_valid_for_connection): Function signature 
	changed, added an argument.

2004-12-11  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-logger-interface.cpp (set_backlog_length): Added. 
	* eca-logger-interface.cpp (backlog): Added. 
	* eca-logger.h (level_to_string): Added.
	* eca-engine-driver.h (exec): Signature changed.
        * library interface version to 14:0:0

2004-12-09  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* sample-ops_impl.h: Added, not part of the public interface.

2004-10-27  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 13 frozen

2004-10-23  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
