@@ -22,6 +22,7 @@ class LINEAR_ENVELOPE : public CONTROLLER_SOURCE {
 
   virtual void init(void);
   virtual parameter_t value(void);
+  virtual void set_initial_value(parameter_t arg) {}
 
   std::string parameter_names(void) const { return("length-sec"); }
   void set_parameter(int param, parameter_t value);
