@@ -16,6 +16,7 @@ class MIDI_CONTROLLER : public CONTROLLER_SOURCE,
 
   virtual void init(void);
   virtual parameter_t value(void);
+  virtual void set_initial_value(parameter_t arg);
 
   std::string parameter_names(void) const { return("controller,channel"); }
   void set_parameter(int param, parameter_t value);
