@@ -18,6 +18,7 @@ class OSCILLATOR : public CONTROLLER_SOURCE {
 
   virtual std::string name(void) const = 0;
   virtual parameter_t value(void) = 0;
+  virtual void set_initial_value(parameter_t arg) {}
 
   /**
    * Constructor
